# Continuous-Integration

./: README.md  main  main.cpp  stack.h  test.cpp
exercises-python/: exercise2.py  exercise3.py  exercise4.py
exercises/exercise-1/: Makefile
exercises/exercise-2/: Makefile
exercises/exercise-3/: CMakeLists.txt  Greeting.h  test_greeting.cpp
